adicionando teste unitários e tratamento de erro